Updated Swagger, Register User working
